--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,22 @@ name = "regex4seq"
 version = "0.1.0"
 description = "Regular Expressions for Sequences of Things"
 authors = ["Stephen Leach <sfkleach@gmail.com>"]
-license = "Python Software Foundation License"
+license = "LGPL-3.0-or-later"
 readme = "README.md"
+homepage="https://regex4seq.readthedocs.io/en/latest/"
+documentation="https://regex4seq.readthedocs.io/en/latest/"
+repository = "https://github.com/sfkleach/regex4seq"
+keywords = ["regex", "regular expressions", "pattern matching", "sequence matching"]
+classifiers = [
+    "Development Status :: 2 - Pre-Alpha",
+    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"
+    "Intended Audience :: Developers",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Topic :: Software Development :: Libraries",
+    "Typing :: Typed"
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
