--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "regex4seq"
-version = "0.1.0"
+version = "0.2.0"
 description = "Regular Expressions for Sequences of Things"
 authors = ["Stephen Leach <sfkleach@gmail.com>"]
 license = "LGPL-3.0-or-later"
@@ -27,6 +27,7 @@ python = "^3.10"
 pytest = "^7.4.0"
 mypy = "^1.5.1"
 sphinx = "^7.2.3"
+furo = "^2023.8.19"
 
 [build-system]
 requires = ["poetry-core"]
