--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,6 +16,10 @@ build:
     post_install:
       - poetry install
 
+python:
+  install:
+  - requirements: docs/requirements.txt
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
