Remove unnecessary Sphinx theme

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,3 @@
 # packages for RTD to pick up (not used for local dev)
-furo>=2023.8.19
+# Furo commented out in favour of a light theme.
+#furo>=2023.8.19
